--- a/index.html
+++ b/index.html
@@ -22,12 +22,36 @@
 
   </head>
   <body>
-    <div class="container-fluid">
-      <!-- this is the container for all namespaces -->
-      <div class="row device-row" id="device-row">
-           
-      </div><!-- end of row -->
-    </div><!-- end of container -->
+    <header>
+      <div class-"container-fluid">
+        <!-- Image and text -->
+        <nav class="navbar navbar-light bg-light">
+          <a class="navbar-brand" href="#">
+            <img src="/img/LogoCF.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            INFO-3114 - PROJECT 2 - WINTER 2020 - CARLOS FERRAZ
+          </a>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <div class="container">
+        <!-- this is the container for all namespaces -->
+        <div class="row device-row" id="device-row">
+            
+        </div><!-- end of row -->
+      </div><!-- end of container -->
+    </main>
+
+    <footer>
+      <div class="container-fluid">
+        <nav class="navbar navbar-light bg-light">
+          <span class="navbar-text">
+            INFO-3114 - PROJECT 2 - WINTER 2020 - Copyright &copy; 2020 Carlos Ferraz
+          </span>
+        </nav>
+      </div>
+    </footer>
 
     <!-- Modal for messages to user -->
     <!-- Button trigger modal message-->
